WanaLyzer/out/numpy/typing/tests/data/fail/arrayterator.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

AR_i8: np.ndarray[Any, np.dtype[np.int64]]
ar_iter: Incomplete
